--- a/nsi/t/epp/index_epp.html
+++ b/nsi/t/epp/index_epp.html
@@ -73,51 +73,51 @@
 		<h2>S'entraîner à l'épreuve pratique avec les sujets de 2022</h2>
 		
 		<p> <a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet1-2022.ipynb">01</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet2-2022.ipynb">02</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet2-2022.ipynb">02</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet3-2022.ipynb">03</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet4-2022.ipynb">04</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet4-2022.ipynb">04</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet5-2022.ipynb">05</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet6-2022.ipynb">06</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet7-2022.ipynb">07</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet8-2022.ipynb">09</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet8-2022.ipynb">09</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet9-2022.ipynb">09</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet10-2022.ipynb">10</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet10-2022.ipynb">10</a>
 		</p>
 		
 		<p> <a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet11-2022.ipynb">11</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet12-2022.ipynb">12</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet12-2022.ipynb">12</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet13-2022.ipynb">13</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet14-2022.ipynb">14</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet15-2022.ipynb">15</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet16-2022.ipynb">16</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet17-2022.ipynb">17</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet18-2022.ipynb">18</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet19-2022.ipynb">19</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet14-2022.ipynb">14</a>
+		<a class= "autre" style="color: #31F24B"  href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet15-2022.ipynb">15</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet16-2022.ipynb">16</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet17-2022.ipynb">17</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet18-2022.ipynb">18</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet19-2022.ipynb">19</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet20-2022.ipynb">20</a>
 		</p>
 		
-		<p> <a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet21-2022.ipynb">21</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet22-2022.ipynb">22</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet23-2022.ipynb">23</a>
+		<p> <a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet21-2022.ipynb">21</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet22-2022.ipynb">22</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet23-2022.ipynb">23</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet24-2022.ipynb">24</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet25-2022.ipynb">25</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet26-2022.ipynb">26</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet26-2022.ipynb">26</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet27-2022.ipynb">27</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet28-2022.ipynb">28</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet28-2022.ipynb">28</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet29-2022.ipynb">29</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet30-2022.ipynb">30</a>
 		</p>
 		
-		<p> <a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet31-2022.ipynb">31</a>
+		<p> <a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet31-2022.ipynb">31</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet32-2022.ipynb">32</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet33-2022.ipynb">33</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet34-2022.ipynb">34</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet35-2022.ipynb">35</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet36-2022.ipynb">36</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet37-2022.ipynb">37</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet35-2022.ipynb">35</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet36-2022.ipynb">36</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet37-2022.ipynb">37</a>
 		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet38-2022.ipynb">38</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet39-2022.ipynb">39</a>
-		<a class= "autre" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet50-2022.ipynb">40</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet39-2022.ipynb">39</a>
+		<a class= "autre" style="color: #31F24B" href="https://notebook.basthon.fr/?from=https://jbduthoit.github.io/m_nsi/nsi/t/epp/2022/sujet50-2022.ipynb">40</a>
 		</p>
 		
 		
