--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -73,7 +73,8 @@
 		<p> <a href="nsi_1_algo_1.pdf", target="_blank">  Intro sur les algorithmes</a> </p>
 		<p> <a href="nsi_1_algo_2.pdf", target="_blank">  Recherches de valeurs dans un tableau</a> </p>
 		<p> <a href="nsi_1_algo_3.pdf", target="_blank">  Tri selection</a> </p>
-			
+		<p> <a href="nsi_1_algo_4.pdf", target="_blank">  Tri insertion </a> </p>
+		<p> <a href="nsi_1_algo_5.pdf", target="_blank">  Tri dichotomique </a> </p>	
 			
 		<h2>Liste par compréhension</h2>		
 		<p> <a href="nsi_1_comprehension.pdf", target="_blank">  Le cours  </a> </p>
