--- a/m/2/index.html
+++ b/m/2/index.html
@@ -74,11 +74,13 @@
 		
 		
 		
-		<!-- <h2>Repèrage</h2> -->
+		<h2>Repèrage</h2>
 		
-		<!-- <p> <a href="m_2_repere_1.pdf", target="_blank">  Coordonnées d'un point </a> </p> -->
-		<!-- <p> <a href="m_2_repere_2.pdf", target="_blank">  Coordonnées d'un vecteur </a> </p> -->
-		<!-- <p> <a href="m_2_repere_3.pdf", target="_blank">  Colinéarité de deux vecteurs </a> </p> -->
+		
+		<p> <a href="m_2_reperage_activite.pdf", target="_blank"> Mais ils sont où les carrées ? :-) </a> </p>
+		<p> <a href="m_2_reperage_1.pdf", target="_blank">  Coordonnées d'un point </a> </p>
+		<p> <a href="m_2_reperage_2.pdf", target="_blank">  Coordonnées d'un vecteur </a> </p>
+		<p> <a href="m_2_reperage_3.pdf", target="_blank">  Colinéarité de deux vecteurs </a> </p>
 		
 			
 			
@@ -113,6 +115,7 @@
 		
 		<p> <a class="td" href="m_2_identites.pdf", target="_blank">  Développer avec les identités remarquables  </a> </p>
 		<p> <a class="td" href="m_2_factorisations.pdf", target="_blank">  Factorisations  </a> </p>
+		<p> <a class="td" href="m_2_equations_rationnelles.pdf", target="_blank">  Equations rationnelles  </a> </p>
 			
     </div>
     
