--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -183,7 +183,7 @@
 		<p> <a href="nsi_t_processus_2.pdf">Ordonnancement</a> </p>
 		<p> <a href="nsi_t_processus_3.pdf">Interbloquages</a> </p>
 		<p> <a href="nsi_t_processus_4.pdf">Programmation concurente</a> </p>
-		p> <a class="autre" href="nsi_t_processus_5.pdf">Exercices types bac</a> </p>
+		<p> <a class="autre" href="nsi_t_processus_5.pdf">Exercices types bac</a> </p>
 		
 		<h2>Sécurisation</h2>
 			
