--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -195,6 +195,8 @@
 		<p> <a href="nsi_t_securisation_5.pdf">Le protocole https</a> </p>
 		
 		
+		<h2> Validation d'un programme </h2>
+		<p> <a href="nsi_t_validation_1.pdf">Validation</a> </p>
     </div>
     <p id="footer">jb duthoit</p>
   
