--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -94,15 +94,15 @@
 		
 		
 		
-		<!-- <h2>Système d'exploitation</h2> -->
+		<h2>Système d'exploitation</h2>
 		
 		
 		
-		<!-- <p> <a href="nsi_1_linux_1.pdf", target="_blank">  Système d'exploitation Linux: définition </a> </p> -->
-		<!-- <p> <a href="nsi_1_linux_2.pdf", target="_blank">  Lignes de commande </a> </p> -->
-		<!-- <p> <a href="nsi_1_td_linux_1.pdf", target="_blank">  Découvrir un émulateur en ligne </a> </p> -->
-		<!-- <p> <a class = "td" href="nsi_1_td_linux_2.pdf", target="_blank">  TD sur les lignes de commandes </a> </p> -->
-		<!-- <p> <a class = "td" href="nsi_1_td_linux_3.pdf", target="_blank"> TD sur la gestion des droits</a> </p> -->
+		<p> <a href="nsi_1_os_1.pdf", target="_blank">  Système d'exploitation, définitions </a> </p>
+		<p> <a href="nsi_1_os_2.pdf", target="_blank">  Lignes de commandes </a> </p>
+		<p> <a href="nsi_1_os_3.pdf", target="_blank">  Gestion des droits </a> </p>
+		<p> <a class = "td" href="nsi_1_os_4.pdf", target="_blank">  Jouons ! </a> </p>
+		
 		
 		<!-- <h2>Les données structurées</h2> -->
 		
