--- a/m/1/index.html
+++ b/m/1/index.html
@@ -109,30 +109,26 @@
 		<p> <a href="m_1_suites_sg.pdf", target="_blank">  Les suites géométriques  </a> </p>
 		
 		
-		<!-- <h2>Trigonométrie</h2> -->
+		<h2>Trigonométrie</h2>
 		
 		
 		
-		<!-- <p> <a href="m_1_trigo_1.pdf", target="_blank">  Cercle trigonométrique et radian  </a> </p> -->
-		<!-- <p> <a href="m_1_trigo_2.pdf", target="_blank">  Repérage sur le cercle  </a> </p> -->
-		<!-- <p> <a href="m_1_trigo_3.pdf", target="_blank">  Cosinus et sinus  </a> </p> -->
-		<!-- <p> <a href="m_1_trigo_4.pdf", target="_blank">  Equations trigonométriques  </a> </p> -->
-		
-		<!-- <h2>Fonction exponnetielle</h2> -->
+		<p> <a href="m_1_trigo_1.pdf", target="_blank">  Cercle trigonométrique et radian  </a> </p>
+		<p> <a href="m_1_trigo_2.pdf", target="_blank">  Repérage sur le cercle  </a> </p>
+		<p> <a href="m_1_trigo_3.pdf", target="_blank">  Cosinus et sinus  </a> </p>
+		<p> <a href="m_1_trigo_4.pdf", target="_blank">  Equations trigonométriques  </a> </p>
 		
 		
 		
-		<!-- <p> <a href="m_1_expo_1.pdf", target="_blank">  Définition de la fonction exponentielle  </a> </p> -->
-		<!-- <p> <a href="m_1_expo_2.pdf", target="_blank">  Etude de la fonction exponentielle  </a> </p> -->
+		<h2>Fonction exponnetielle</h2>
+		
+		
+		
+		<p> <a href="m_1_expo_1.pdf", target="_blank">  Définition de la fonction exponentielle  </a> </p>
+		<p> <a href="m_1_expo_2.pdf", target="_blank">  Etude de la fonction exponentielle  </a> </p>
 	
 		
-		<!-- <h2>Les variables aléatoires</h2> -->
 		
-		
-		
-		<!-- <p> <a href="m_1_va_1.pdf", target="_blank">  La notion de variable aléatoire  </a> </p> -->
-		<!-- <p> <a href="m_1_va_2.pdf", target="_blank">  Variance d'une variable aléatoire  </a> </p> -->
-	
 		
 		<!-- <h2>Le produit scalaire</h2> -->
 		
