--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -104,37 +104,28 @@
 		<p> <a class = "td" href="nsi_1_os_4.pdf", target="_blank">  Jouons ! </a> </p>
 		
 		
-		<!-- <h2>Les données structurées</h2> -->
+		<h2>Les données structurées</h2>
 		
 		
 		
-		<!-- <p> <a href="nsi_1_donnees_1.pdf", target="_blank">  Lire, écrire et modifier un fichier txt avec python  </a> </p> -->
-		<!-- <p> <a href="nsi_1_donnees_2.pdf", target="_blank">  Les fichiers .csv  </a> </p> -->
-		<!-- <p> <a href="nsi_1_donnees_3.pdf", target="_blank">  Importer des données depuis un fichier csv  </a> </p> -->
-		<!-- <p> <a href="nsi_1_donnees_4.pdf", target="_blank">  Savoir rechercher et trier  </a> </p> -->
-		<!-- <p> <a href="nsi_1_donnees_5.pdf", target="_blank">  Savoir réunir et fusionner deux tables  </a> </p> -->
+		<p> <a href="nsi_1_donnees_1.pdf", target="_blank">  Lire, écrire et modifier un fichier txt avec python  </a> </p>
+		<p> <a href="nsi_1_donnees_2.pdf", target="_blank">  Les fichiers .csv  </a> </p>
+		<p> <a href="nsi_1_donnees_3.pdf", target="_blank">  Importer des données depuis un fichier csv  </a> </p>
+		<p> <a href="nsi_1_donnees_4.pdf", target="_blank">  Savoir rechercher et trier  </a> </p>
+		<p> <a href="nsi_1_donnees_5.pdf", target="_blank">  Savoir réunir et fusionner deux tables  </a> </p>
 		
-		<!-- <h2>Les réseaux</h2> -->
+		<h2>Les réseaux</h2>
 		
 		
 		
-		<!-- <p> <a href="nsi_1_reseaux_1.pdf", target="_blank">  Intro sur les réseaux </a> </p> -->
-		<!-- <p> <a href="nsi_1_reseaux_2.pdf", target="_blank">  Le modèle OSI et les 7 couches </a> </p> -->
-		<!-- <p> <a href="nsi_1_reseaux_3.pdf", target="_blank">  Comprendre les adresses IP </a> </p> -->
-		<!-- <p> <a href="nsi_1_reseaux_4.pdf", target="_blank">  Le modèle TCP/IP </a> </p> -->
-		<!-- <p> <a class="td" href="nsi_1_reseaux_5.pdf", target="_blank">  Simuler un réseau</a> </p> -->
-		<!-- <p> <a class="autre"  href="nsi_1_reseaux_6.pdf", target="_blank">  Annexes </a> </p> -->
+		<p> <a href="nsi_1_reseaux_1.pdf", target="_blank">  Intro sur les réseaux </a> </p>
+		<p> <a href="nsi_1_reseaux_2.pdf", target="_blank">  Le modèle OSI et les 7 couches </a> </p>
+		<p> <a href="nsi_1_reseaux_3.pdf", target="_blank">  Comprendre les adresses IP </a> </p>
+		<p> <a href="nsi_1_reseaux_4.pdf", target="_blank">  Le modèle TCP/IP </a> </p>
+		<p> <a class="td" href="nsi_1_reseaux_5.pdf", target="_blank">  Simuler un réseau</a> </p>
+		<p> <a class="autre"  href="nsi_1_reseaux_6.pdf", target="_blank">  Annexes </a> </p>
 	
-		<!-- <h2>Intéraction Homme-MAchine</h2> -->
-		
-		
-		
-		<!-- <p> <a href="nsi_1_ihm_1.pdf", target="_blank">  Intro </a> </p> -->
-		<!-- <p> <a href="nsi_1_ihm_2.pdf", target="_blank">  HTML, CSS et formualires </a> </p> -->
-		<!-- <p> <a href="nsi_1_ihm_3.pdf", target="_blank">  Le JavaScript </a> </p> -->
-		<!-- <p> <a href="nsi_1_ihm_4.pdf", target="_blank">  Requête HTTP </a> </p> -->
-		<!-- <p> <a class="autre" href="nsi_1_ihm_5.pdf", target="_blank">  Exemple de formulaire</a> </p> -->
-		<!-- <p> <a class="autre" href="nsi_1_ihm_6.pdf", target="_blank">  Hors programme: Développement web côté serveur</a> </p> -->
+
 	
 	</div>
     
