--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -109,10 +109,11 @@
 		
 		
 		<p> <a href="nsi_1_donnees_1.pdf", target="_blank">  Lire, écrire et modifier un fichier txt avec python  </a> </p>
-		<p> <a href="nsi_1_donnees_2.pdf", target="_blank">  Les fichiers .csv  </a> </p>
-		<p> <a href="nsi_1_donnees_3.pdf", target="_blank">  Importer des données depuis un fichier csv  </a> </p>
-		<p> <a href="nsi_1_donnees_4.pdf", target="_blank">  Savoir rechercher et trier  </a> </p>
-		<p> <a href="nsi_1_donnees_5.pdf", target="_blank">  Savoir réunir et fusionner deux tables  </a> </p>
+		<p> <a href="nsi_1_donnees_2.pdf", target="_blank">  Les fichiers .csv  </a>
+			<a href="pays.csv">Télécharger le fichier csv</a>
+		</p>
+		<p> <a href="nsi_1_donnees_3.pdf", target="_blank">  Savoir rechercher et trier  </a> </p>
+		<p> <a href="nsi_1_donnees_4.pdf", target="_blank">  Savoir réunir et fusionner deux tables  </a> </p>
 		
 		<h2>Les réseaux</h2>
 		
