--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -197,6 +197,11 @@
 		
 		<h2> Validation d'un programme </h2>
 		<p> <a href="nsi_t_validation_1.pdf">Validation</a> </p>
+		
+		
+		<h2> Les graphes </h2>
+		<p> <a href="nsi_t_graphe_1.pdf">Définition</a> </p>
+		<p> <a href="nsi_t_graphe_2.pdf">Implémentation d'un graphe</a> </p>
     </div>
     <p id="footer">jb duthoit</p>
   
