--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -110,9 +110,11 @@
 		
 		<p> <a href="nsi_1_donnees_1.pdf", target="_blank">  Lire, écrire et modifier un fichier txt avec python  </a> </p>
 		<p> <a href="nsi_1_donnees_2.pdf", target="_blank">  Les fichiers .csv  </a>
-			<a href="pays.csv">Télécharger le fichier csv</a>
+			<a href="pays.csv">Télécharger le fichier pays.csv</a>
 		</p>
-		<p> <a href="nsi_1_donnees_3.pdf", target="_blank">  Savoir rechercher et trier  </a> </p>
+		<p> <a href="nsi_1_donnees_3.pdf", target="_blank">  Savoir rechercher et trier  </a> 
+			<a href="titanic.csv">Télécharger le fichier titanic.csv</a>
+		</p>
 		<p> <a href="nsi_1_donnees_4.pdf", target="_blank">  Savoir réunir et fusionner deux tables  </a> </p>
 		
 		<h2>Les réseaux</h2>
