--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -113,7 +113,8 @@
 			<a href="pays.csv">Télécharger le fichier pays.csv</a>
 		</p>
 		<p> <a href="nsi_1_donnees_3.pdf", target="_blank">  Savoir rechercher et trier  </a> 
-			<a href="titanic.csv">Télécharger le fichier titanic.csv</a>
+			<a href="titanic.csv">Télécharger  titanic.csv</a>
+			<a href="eleves.csv">   Télécharger eleves.csv</a>
 		</p>
 		<p> <a href="nsi_1_donnees_4.pdf", target="_blank">  Savoir réunir et fusionner deux tables  </a> </p>
 		
