--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -202,8 +202,16 @@
 		<h2> Les graphes </h2>
 		<p> <a href="nsi_t_graphe_1.pdf">Définition</a> </p>
 		<p> <a href="nsi_t_graphe_2.pdf">Implémentation d'un graphe</a> </p>
+		
+		<h2> Algorithmes sur les graphes </h2>
+		<p> <a href="nsi_t_algo_graphe_1.pdf">Algorithmes sur les graphes</a> </p>
+		
+		
+		
     </div>
     <p id="footer">jb duthoit</p>
+  
+  
   
   </body>
 </html>
