--- a/m/2/index.html
+++ b/m/2/index.html
@@ -82,7 +82,13 @@
 		<p> <a href="m_2_reperage_2.pdf", target="_blank">  Coordonnées d'un vecteur </a> </p>
 		<p> <a href="m_2_reperage_3.pdf", target="_blank">  Colinéarité de deux vecteurs </a> </p>
 		
-			
+		<h2>Fonctions affines</h2>
+		
+		
+		<p> <a href="m_2_affines_1.pdf", target="_blank"> Définitions et premières propriétés </a> </p>
+		<p> <a href="m_2_affines_2.pdf", target="_blank"> Etude d'une fonction affine </a> </p>
+		<p> <a href="m_2_affines_2.pdf", target="_blank"> Tableaux de signes et inéquations </a> </p>
+		
 			
 			
 		<!-- <h2>Informations chiffrées</h2> -->
