--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -117,11 +117,10 @@
 			<a href="eleves.csv">   Télécharger eleves.csv</a>
 		</p>
 		<p> <a href="nsi_1_donnees_4.pdf", target="_blank">  Savoir réunir et fusionner deux tables  </a> </p>
+		<p> <a href="nsi_1_donnees_5.pdf", target="_blank">  Exercices de révision </a> <a href="artistes.csv">Télécharger  artistes.csv</a> </p>
+		
 		
 		<h2>Les réseaux</h2>
-		
-		
-		
 		<p> <a href="nsi_1_reseaux_1.pdf", target="_blank">  Intro sur les réseaux </a> </p>
 		<p> <a href="nsi_1_reseaux_2.pdf", target="_blank">  Le modèle OSI et les 7 couches </a> </p>
 		<p> <a href="nsi_1_reseaux_3.pdf", target="_blank">  Comprendre les adresses IP </a> </p>
