--- a/m/1/index.html
+++ b/m/1/index.html
@@ -124,7 +124,8 @@
 		
 		
 		
-		<p> <a href="m_1_expo_1.pdf", target="_blank">  Définition de la fonction exponentielle  </a> </p>
+		<p> <a href="m_1_expo_1.pdf", target="_blank">  Définition de la fonction exponentielle  </a>
+			<a href="https://www.geogebra.org/calculator/saadnnwr", target="_blank">  fichier geogebra approche  </a>		</p>
 		<p> <a href="m_1_expo_2.pdf", target="_blank">  Etude de la fonction exponentielle  </a> </p>
 	
 		
