--- a/m/2/index.html
+++ b/m/2/index.html
@@ -86,11 +86,11 @@
 		
 		
 		<p> <a href="m_2_affines_1.pdf", target="_blank"> Définitions et premières propriétés </a> </p>
-		<p> <a class = "qcm" href="" , target="_blank"> S'entraîner avec la signification géométrique de m et p</a> </p>
+		<p> <a class = "qcm" href="https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMThZUlpqWVU0VU1zVWl6UmZUUjVHVzhQeUlINW0zVDNLSXMyOGItMDg1aGciLCJ1c2VycyI6IkFub255bWUifQ==" target="_blank"> S'entraîner avec la signification géométrique de m et p</a> </p>
 		<p> <a href="m_2_affines_2.pdf", target="_blank"> Etude d'une fonction affine </a> </p>
 		<p> <a href="m_2_affines_2.pdf", target="_blank"> Tableaux de signes et inéquations </a> </p>
 		
-			cd cd
+	
 			
 		<!-- <h2>Informations chiffrées</h2> -->
 		
