--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -122,11 +122,11 @@
 		
 		<h2>Les réseaux</h2>
 		<p> <a href="nsi_1_reseaux_1.pdf", target="_blank">  Intro sur les réseaux </a> </p>
-		<p> <a href="nsi_1_reseaux_2.pdf", target="_blank">  Le modèle OSI et les 7 couches </a> </p>
-		<p> <a href="nsi_1_reseaux_3.pdf", target="_blank">  Comprendre les adresses IP </a> </p>
-		<p> <a href="nsi_1_reseaux_4.pdf", target="_blank">  Le modèle TCP/IP </a> </p>
-		<p> <a class="td" href="nsi_1_reseaux_5.pdf", target="_blank">  Simuler un réseau</a> </p>
-		<p> <a class="autre"  href="nsi_1_reseaux_6.pdf", target="_blank">  Annexes </a> </p>
+		<p> <a href="nsi_1_reseaux_2.pdf", target="_blank">  Comprendre les adresses IP </a> </p>
+		<p> <a href="nsi_1_reseaux_3.pdf", target="_blank">  Le modèle TCP/IP </a> </p>
+		<p> <a class="td" href="nsi_1_reseaux_4.pdf", target="_blank">  Simuler un réseau</a> </p>
+		<p> <a class="autre"  href="nsi_1_reseaux_5.pdf", target="_blank">  Annexes </a> </p>
+		<p> <a href="nsi_1_reseaux_6.pdf", target="_blank">  Hors programme: le modèle OSI et les 7 couches </a> </p>
 	
 
 	
