--- a/m/1/index.html
+++ b/m/1/index.html
@@ -125,20 +125,20 @@
 		
 		
 		<p> <a href="m_1_expo_1.pdf", target="_blank">  Définition de la fonction exponentielle  </a>
-			<a href="https://www.geogebra.org/calculator/saadnnwr", target="_blank">  fichier geogebra approche  </a>		</p>
+			<a href="https://www.geogebra.org/calculator/saadnnwrcd objectex", target="_blank">  fichier geogebra approche  </a>		</p>
 		<p> <a href="m_1_expo_2.pdf", target="_blank">  Etude de la fonction exponentielle  </a> </p>
 	
 		
 		
 		
-		<!-- <h2>Le produit scalaire</h2> -->
+		<h2>Le produit scalaire</h2>
 		
 		
 		
-		<!-- <p> <a href="m_1_prod_scal_1.pdf", target="_blank">  Expressions du produit scalaire  </a> </p> -->
-		<!-- <p> <a href="m_1_prod_scal_2.pdf", target="_blank">  Propriétés du produit scalaire  </a> </p> -->
-		<!-- <p> <a href="m_1_prod_scal_3.pdf", target="_blank">  Autres expressions du produit scalaire  </a> </p> -->
-		<!-- <p> <a href="m_1_prod_scal_4.pdf", target="_blank">  Calculer un angle ou une longueur  </a> </p> -->
+		<p> <a href="m_1_produit_scalaire_1.pdf", target="_blank">  Expressions du produit scalaire  </a> </p>
+		<p> <a href="m_1_produit_scalaire_2.pdf", target="_blank">  Propriétés du produit scalaire  </a> </p>
+		<p> <a href="m_1_produit_scalaire_3.pdf", target="_blank">  Autres expressions du produit scalaire  </a> </p>
+		<p> <a href="m_1_produit_scalaire_4.pdf", target="_blank">  Calculer un angle ou une longueur  </a> </p>
 		
     </div>
     
