--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -128,7 +128,9 @@
 		<p> <a class="autre"  href="nsi_1_reseaux_5.pdf", target="_blank">  Annexes </a> </p>
 		<p> <a href="nsi_1_reseaux_6.pdf", target="_blank">  Hors programme: le modèle OSI et les 7 couches </a> </p>
 	
-
+		<h2>Les algorithmes gloutons</h2>
+		<p> <a href="nsi_1_glouton_1.pdf", target="_blank">  Principe sur le rendu de monnaie </a> </p>
+		<p> <a href="nsi_1_glouton_2.pdf", target="_blank">  Les grands problèmes gloutons</a> </p>
 	
 	</div>
     
