--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -27,16 +27,16 @@
 	<!-- # <h2> Les projets en html et css </h2> -->
 	<!-- # <a class="autre" href= "projets/index" target="_blank"> Voir le travail réalisé par les élèves </a> -->
 	<!-- # </div> -->
-	<div id="contenu_cours">
-		<h2>Réussir le grand oral</h2>
-		<p> <a class= "autre" href="grand_oral_1.pdf"> Qu'est ce que le grand oral ? </a> </p>
-		<p> <a class= "autre" href="grand_oral_2.pdf"> Quelques thématiques ? </a> </p>
-		<p> <a class= "autre" href="grand_oral_3.pdf"> Ma question est-elle bien formulée ? </a> </p>
+	<!-- <div id="contenu_cours"> -->
+		<!-- <h2>Réussir le grand oral</h2> -->
+		<!-- <p> <a class= "autre" href="grand_oral_1.pdf"> Qu'est ce que le grand oral ? </a> </p> -->
+		<!-- <p> <a class= "autre" href="grand_oral_2.pdf"> Quelques thématiques ? </a> </p> -->
+		<!-- <p> <a class= "autre" href="grand_oral_3.pdf"> Ma question est-elle bien formulée ? </a> </p> -->
 	
 	
 	
-		<h2>S'entraîner à l'épreuve pratique</h2>
-		<p> <a class= "autre"  href="epp/index_epp.html">Les sujets de 2021 et 2022 en notebook !</a></p>
+		<!-- <h2>S'entraîner à l'épreuve pratique</h2> -->
+		<!-- <p> <a class= "autre"  href="epp/index_epp.html">Les sujets de 2021 et 2022 en notebook !</a></p> -->
 		
 		
 		
@@ -81,6 +81,11 @@
 		<!-- </p> -->
 	
 	
+	<div id="contenu_cours">
+		<h2>Se remettre en mémoire python :-) </h2>
+		<p> <a href="nsi_t_rappels.pdf">  S'entraîner en python</a> </p>
+		
+		
     <div id="contenu_cours">
 		<h2>Les bases de données relationnelles</h2>
 			
