--- a/m/1/index.html
+++ b/m/1/index.html
@@ -25,10 +25,10 @@
     <div id="contenu_cours">
 		<h2>Le second degré (partie 1)</h2>
 			
-		<p> <a href="m_1_sec_part1_1.pdf">  Fonction polynôme du second degré </a> </p>
-		<p> <a href="m_1_sec_part1_2.pdf">  Variations de la fonction polynôme </a> </p>
-		<p> <a href="m_1_sec_part1_3.pdf">  Courbe représentative </a> </p>
-		<p> <a href="m_1_sec_part1_4.pdf">  Résoudre équations et inéquations </a> </p>
+		<p> <a href="m_1_sec_degre_1.pdf">   </a> Résoudre des équations et inéquations (rappels de seconde)</p>
+		<p> <a href="m_1_sec_degre_2.pdf">  Fonction polynôme du second degré </a> </p>
+		<!-- <p> <a href="m_1_sec_part1_3.pdf">  Courbe représentative </a> </p> -->
+		<!-- <p> <a href="m_1_sec_part1_4.pdf">  Résoudre équations et inéquations </a> </p> -->
 		
 		
 		<!-- <h2>Les équations cartésiennes (chapitre de seconde)</h2> -->
