--- a/m/1/index.html
+++ b/m/1/index.html
@@ -25,11 +25,14 @@
     <div id="contenu_cours">
 		<h2>Le second degré (partie 1)</h2>
 			
-		<p> <a href="m_1_sec_degre_1.pdf">   </a> Résoudre des équations et inéquations (rappels de seconde)</p>
+		<p> <a href="m_1_sec_degre_1.pdf">  Résoudre des équations et inéquations (rappels de seconde) </a> </p>
 		<p> <a href="m_1_sec_degre_2.pdf">  Fonction polynôme du second degré </a> </p>
-		<!-- <p> <a href="m_1_sec_part1_3.pdf">  Courbe représentative </a> </p> -->
-		<!-- <p> <a href="m_1_sec_part1_4.pdf">  Résoudre équations et inéquations </a> </p> -->
-		
+		<p> <a href="m_1_sec_degre_3.pdf">  Résolution de ax^2+bx+c=0 </a> </p>
+		<p> <a href="m_1_sec_degre_4.pdf">  Factorisation et signe de ax^2+bx+c </a> </p>
+		<p> <a href="m_1_sec_degre_5.pdf">  Variations d'une fonction polynôme du second degré</a> </p>
+		<p> <a href="m_1_sec_degre_6.pdf">  Courbe représentative</a> </p>
+		<p> <a href="m_1_sec_degre_7.pdf">  Somme et produit des racines </a> </p>
+		<p> <a class = "autre" href="m_1_sec_part2_cm.PNG", target="_blank">  Carte mentale</a> </p>
 		
 		<!-- <h2>Les équations cartésiennes (chapitre de seconde)</h2> -->
 			
@@ -59,13 +62,8 @@
 		<p> <a href="m_1_eq_4.pdf", target="_blank">  Point d'intersections de deux droites sécantes </a> </p>
 		
 		
-		<h2>Partie 2 du second degré</h2>
+	
 		
-		<p> <a href="m_1_sec_part2_1.pdf", target="_blank">  Rappels </a> </p>
-		<p> <a href="m_1_sec_part2_2.pdf", target="_blank">  Résolution de l'équation trinôme</a> </p>
-		<p> <a href="m_1_sec_part2_3.pdf", target="_blank">  Signe et factorisation</a> </p>
-		<p> <a href="m_1_sec_part2_4.pdf", target="_blank">  Somme et produit des racines</a> </p>
-		<p> <a class = "autre" href="m_1_sec_part2_cm.PNG", target="_blank">  Carte mentale</a> </p>
 
 		<h2>Probabilités conditionnelles</h2>
 		
