--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -92,7 +92,7 @@
 		<p> <a class="metier" href="https://www.onisep.fr/Ressources/Univers-Metier/Metiers/administrateur-administratrice-de-base-de-donnees">  Découvrir le métier d'Administrateur de bases de données </a> </p>
 		<p> <a href="nsi_t_bdd_1.pdf">  Découvrir les bases de données </a> </p>
 		<p> <a href="nsi_t_bdd_2.pdf">  Bases de données relationnelles </a> </p>
-		<p> <a href="nsi_t_bdd_3.pdf">  Le langage SQL sur un exemple</a> </p>
+		<p> <a href="nsi_t_bdd_3.pdf">  Le langage SQL sur un exemple</a>  <a href="nsi_t_bdd.txt"> Le fichier.txt</a>  </p>
 		<p> <a class= "td" href="nsi_t_bdd_4.pdf">  TD : Et si on partait faire du ski à Val Cenis ?</a> </p>
 		<p> <a class= "td" href="nsi_t_bdd_5.pdf"> Python et le SQL </a> </p>
 		<p> <a class= "autre" href="nsi_t_flask.pdf"> Tuto Flask </a> </p>
