--- a/m/2/index.html
+++ b/m/2/index.html
@@ -120,6 +120,7 @@
 			
 		<h2> TDs </h2>
 		
+		<p> <a class="td" href="m_2_developper.pdf", target="_blank">  Développer  </a> </p>
 		<p> <a class="td" href="m_2_identites.pdf", target="_blank">  Développer avec les identités remarquables  </a> </p>
 		<p> <a class="td" href="m_2_factorisations.pdf", target="_blank">  Factorisations  </a> </p>
 		<p> <a class="td" href="m_2_equations_rationnelles.pdf", target="_blank">  Equations rationnelles  </a> </p>
