--- a/m/1/index.html
+++ b/m/1/index.html
@@ -31,7 +31,7 @@
 		<p> <a href="m_1_sec_degre_4.pdf">  Factorisation et signe de ax^2+bx+c </a> </p>
 		<p> <a href="m_1_sec_degre_5.pdf">  Variations d'une fonction polynôme du second degré</a> </p>
 		<p> <a href="m_1_sec_degre_6.pdf">  Courbe représentative</a> </p>
-		<p> <a href="m_1_sec_degre_7.pdf">  Somme et produit des racines </a> </p>
+		<!-- <p> <a href="m_1_sec_degre_7.pdf">  Somme et produit des racines </a> </p> -->
 		<p> <a class = "autre" href="m_1_sec_part2_cm.PNG", target="_blank">  Carte mentale</a> </p>
 		
 		<!-- <h2>Les équations cartésiennes (chapitre de seconde)</h2> -->
