--- a/m/1/index.html
+++ b/m/1/index.html
@@ -23,7 +23,7 @@
     </nav>
     
     <div id="contenu_cours">
-		<h2>Le second degré (partie 1)</h2>
+		<h2>Le second degré</h2>
 			
 		<p> <a href="m_1_sec_degre_1.pdf">  Résoudre des équations et inéquations (rappels de seconde) </a> </p>
 		<p> <a href="m_1_sec_degre_2.pdf">  Fonction polynôme du second degré </a> </p>
