--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -110,7 +110,7 @@
 		<h2>Les dictionnaires</h2>
 			
 		<p> <a href="nsi_t_dico_t.pdf">  Les dictionnaires </a> <a class="autre" href="nsi_t_dico_1.pdf">  (Le cours de première) </a> </p>
-		<p> <a class="autre" href="nsi_t_dico_mot.txt">  Le mot à décoder exo 3.46</a> </p>
+		<p> <a class="autre" href="nsi_t_dico_mot.txt">  Les messages à décoder</a> </p>
 		
 		
 		<h2>La Programmation Orientée Objet</h2>
