--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -40,6 +40,7 @@
 		
 		<h2>Représentation des données</h2>
 			
+		<p> <a href="nsi_1_representation_0.pdf">  Introduction </a> </p>
 		<p> <a href="nsi_1_representation_1.pdf">  Représentation des entiers positifs </a> </p>
 		<p> <a href="nsi_1_representation_2.pdf">  Représentation des entiers relatifs </a> </p>
 		<p> <a href="nsi_1_representation_3.pdf">  Représentation des réels </a> </p>
