--- a/snt/index.html
+++ b/snt/index.html
@@ -33,7 +33,7 @@
     <div id="contenu_cours">
 		<h2>Le codage de l'information</h2>
 			
-		<p> <a href="snt_codage_entiers">  Codage des entiers </a> </p>
+		<p> <a href="snt_codage_entiers.pdf">  Codage des entiers </a> </p>
 	
 	
 	</div>
