--- a/snt/index.html
+++ b/snt/index.html
@@ -33,7 +33,10 @@
     <div id="contenu_cours">
 		<h2>Le codage de l'information</h2>
 			
-		<p> <a href="snt_codage_entiers.pdf">  Codage des entiers </a> </p>
+		<p> <a href="snt_codage_1.pdf">  Codage des entiers </a> </p>
+		<p> <a href="snt_codage_2.pdf">  Codage des caractères </a> </p>
+		<p> <a href="snt_codage_3.pdf">  Stockage </a> </p>
+		<p> <a href="snt_codage_4.pdf">  Codage d'une image </a> </p>
 	
 	
 	</div>
