--- a/snt/index.html
+++ b/snt/index.html
@@ -38,6 +38,14 @@
 		<p> <a href="snt_codage_3.pdf">  Stockage </a> </p>
 		<p> <a href="snt_codage_4.pdf">  Codage d'une image </a> <a href="1.bmp"> --> Le fichier couleur 1</a>  <a href="couleur.bmp"> --> Le fichier RGB.py</a>  </p>
 	
+		<h2>Internet</h2>
+			
+		<p> <a href="snt_internet_1.pdf">  Quelques vidéos pour découvrir internet</a>  </p>
+		<p> <a href="snt_internet_2.pdf">  Les réseaux informatiques </a>  <a href="chouette.txt"> --> Le fichier txt</a> </p>
+		<p> <a href="snt_internet_3.pdf">  Le protocole TCP/IP </a> </p>
+		<p> <a href="snt_internet_4.pdf">  Le pair à pair </a> <a href="1.bmp"> --> Le fichier couleur 1</a>  <a href="couleur.bmp"> --> Le fichier RGB.py</a>  </p>
+		<p> <a href="snt_internet_5.pdf">  Construire un réseau avec un simulateur </a> </p>
+	
 	
 	</div>
     
