--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -53,7 +53,7 @@
 		<h2>Les dictionnaires Python</h2>
 		
 		<p> <a href="nsi_1_dico_1.pdf">  Qu'est ce qu'un dictionnaire ?  </a> </p>
-		<p> <a href="nsi_1_dico_2.pdf">  Méthodes associées et exercices  </a> </p>
+		<p> <a href="nsi_1_dico_2.pdf">  Méthodes associées et exercices  </a> <a href="dico_data.txt"> Les données </a> </p>
 
 		<h2>Interactions sur le Web</h2>
 		<p> <a href="nsi_1_web_1.pdf", target="_blank">  HTML et CSS </a> </p>
