--- a/m/2/index.html
+++ b/m/2/index.html
@@ -39,7 +39,7 @@
 		<p> <a href="m_2_generalites_fonctions_2.pdf">  Courbe représentative de fonction </a> </p>
 		<p> <a class="qcm" href= "https://doctools.dgpad.net/exam.php?datas=eyJiYXNlaWQiOiIxWHhYckM2cFFlZzlWdzNVa1I1NzJFTFY0VUV1Y3Q5Q0pkQkJFNGhQX3NubyIsImRlX2Jhc2UiOiIxNWtnV0tfQmNXenhnSER5NjlrVDUyc0ZacmpUSmNsSDg2V19kMWFhNERxTSIsImlkIjoiMVZCYXo2QUxueWlSLWJRQVptVlllZHpqRV9zalNqZFVkT3RDa3NaTk9NbkUiLCJ1c2VycyI6IkFub255bWUifQ=="> QCM Lectures graphiques ! </a> </p>
 		<!-- <p> <a href="m_2_generalites_fonctions_3.pdf">  Fonction paire, fonction impaire </a> </p> -->
-		<p> <a href="m_2_generalites_fonctions_3.pdf">  Découvrir les fonctions de réference </a> </p>
+		<p> <a href="m_2_generalites_fonctions_3.pdf">  Découvrir les fonctions de réference</a> </p>
 		
 		<!-- <p> <a href="m_2_generalites_fonctions_4.pdf">  Variations de fonction </a> </p> -->
 		<!-- <p> <a href="m_2_generalites_fonctions_5.pdf">  Extrema de fonctions</a> </p> -->
@@ -48,7 +48,7 @@
 		<h2>Les vecteurs du plan</h2>
 		
 		<p> <a href="vecteurs_1.pdf">Qu'est ce qu'un vecteur ?</a> </p>
-		<p> <a href="vecteurs_2.pdf">Opérations sur les vecteurs ?</a> </p>
+		<p> <a href="vecteurs_2.pdf">Opérations sur les vecteurs</a> </p>
 		<p> <a href="vecteurs_3.pdf">Vecteurs colinéaires</a> </p>
 		
 		<h2>Arithmétique</h2>
