--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -109,7 +109,7 @@
 		
 		<h2>Les dictionnaires</h2>
 			
-		<p> <a href="nsi_t_dico_t.pdf">  Les dictionnaires </a> <a class="autre" href="nsi_t_dico_1.pdf">  -->Le cours de première </a> </p>
+		<p> <a href="nsi_t_dico_t.pdf">  Les dictionnaires </a> <a class="autre" href="nsi_t_dico_1.pdf">  -->Le cours de premièrecd  </a> </p>
 		<p> <a class="autre" href="nsi_t_dico_mot.txt">  --> Les données du chapitre </a> </p>
 		
 		
@@ -123,7 +123,7 @@
 		<h2>Les structures linéaires</h2>
 			
 		<p> <a href="nsi_t_sl_1.pdf">Types abstraits...</a> </p>
-		<p> <a href="nsi_t_sl_2.pdf">Comment implémenter une liste ?</a> </p>
+		<p> <a href="nsi_t_sl_2.pdf">Quels sont les différents moyens d'implémenter une liste, une file et une pile</a> </p>
 		<p> <a href="nsi_t_sl_3.pdf">Implémentation des listes chaînées</a> </p>
 		<p> <a href="nsi_t_sl_4.pdf">Implémenter une pile</a> </p>
 		<p> <a href="nsi_t_sl_5.pdf">Implémentation une file</a> </p>
