--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -132,7 +132,7 @@
 		<h2>Diviser pour régner</h2>
 			
 		<p> <a href="nsi_t_dpr_1.pdf">Intro</a> </p>
-		<p> <a href="nsi_t_dpr_2.pdf">Le tri fusion ?</a> </p>
+		<p> <a href="nsi_t_dpr_2.pdf">Le tri fusion</a> </p>
 	
 		
 		<h2>Les arbres</h2>
