--- a/snt/index.html
+++ b/snt/index.html
@@ -40,12 +40,12 @@
 	
 		<h2>Internet</h2>
 			
-		<p> <a href="snt_internet_1.pdf">  Quelques vidéos pour découvrir internet</a>  </p>
-		<p> <a href="snt_internet_2.pdf">  Les réseaux informatiques </a>  </p>
-		<p> <a href="snt_internet_3.pdf">  Le protocole TCP/IP </a> </p>
-		<p> <a href="snt_internet_4.pdf">  Le pair à pair </a> </p>
-		<p> <a href="snt_internet_5.pdf">  Construire un réseau avec un simulateur </a> </p>
-		<p> <a href="snt_internet_6.pdf">  Un mot sur l'écologie </a> </p>
+		<p> <a href="_snt_internet_1.pdf">  Quelques vidéos pour découvrir internet</a>  </p>
+		<p> <a href="_snt_internet_2.pdf">  Les réseaux informatiques </a>  </p>
+		<p> <a href="_snt_internet_3.pdf">  Le protocole TCP/IP </a> </p>
+		<p> <a href="_snt_internet_4.pdf">  Le pair à pair </a> </p>
+		<p> <a href="_snt_internet_5.pdf">  Construire un réseau avec un simulateur </a> </p>
+		<p> <a href="_snt_internet_6.pdf">  Un mot sur l'écologie </a> </p>
 	
 	
 	</div>
