--- a/nsi/1/index.html
+++ b/nsi/1/index.html
@@ -60,8 +60,8 @@
 		<p> <a href="nsi_1_web_2.pdf", target="_blank">  Les formulaires en HTML </a> </p>
 		<p> <a class="td" href="projet_html/nsi_1_projet_html_css.html" target="blank"> Projet HTML/CSS</a> <a href="projet.zip">Télécharger le modèle</a></p>
 		<p> <a href="nsi_1_web_3.pdf", target="_blank">  Le JavaScript </a> </p>
-		<!-- <p> <a href="nsi_1_web_5.pdf", target="_blank">  Le protocole HTTP </a> </p> -->
-		<!-- <p> <a href="nsi_1_web_6.pdf", target="_blank">  Utiliser Flask pour créer un serveur local </a> </p> -->
+		<p> <a href="nsi_1_web_4.pdf", target="_blank">  Le protocole HTTP </a> <a href="serveur_python.txt"> le serveur python </a> </p>
+		<p> <a href="nsi_1_web_6.pdf", target="_blank">  Utiliser Flask pour créer un serveur local </a> </p>
 		<!-- <p> <a href="nsi_1_web_7.pdf", target="_blank">  Hors programme: développement web et php</a> </p> -->
 		<!-- <p> <a href="nsi_1_ch7.pdf", target="_blank">  Le cours  </a> </p> -->
 		<!-- <p> <a class="td" href="projets/index.html", target="_blank">  Les projets  </a> </p> -->
@@ -83,6 +83,9 @@
 		<p> <a href="nsi_1_algo_3.pdf", target="_blank">  Tri selection</a> </p>
 		<p> <a href="nsi_1_algo_4.pdf", target="_blank">  Tri insertion </a> </p>
 		<p> <a href="nsi_1_algo_5.pdf", target="_blank">  Tri dichotomique </a> </p>	
+		
+		
+		
 			
 		<h2>Liste par compréhension</h2>		
 		<p> <a href="nsi_1_comprehension.pdf", target="_blank">  Le cours  </a> </p>
