--- a/m/1/index.html
+++ b/m/1/index.html
@@ -14,10 +14,11 @@
 
     <nav>
       <ul id="menu">
-		<li><a href="accueil.html">  Accueil  </a></li>
+		<!-- <li><a href="accueil.html">  Accueil  </a></li> -->
         <li><a href="index.html">  Les cours et savoir-faire  </a></li>
         <li><a href="python.html">  Python  </a></li>
         <li><a href="../rien.pdf">  Les maths, ça ne sert à rien ! </a></li>
+		<li> <a href="../video.html" target="_blank"> Vidéos</a> </li>
         
       </ul>
     </nav>
