--- a/m/video.html
+++ b/m/video.html
@@ -10,7 +10,7 @@
   
   <body>
   <div id="conteneur">    
-    <h1 id="header"><a href="#" title="Accueil"><span>Colored Design</span></a></h1>
+    <h1 id="header"><a href="#" title="Accueil"><span>Vidéos</span></a></h1>
 
 
     
@@ -18,10 +18,10 @@
 		<h2>Le dilemne du prisonnier !</h2>
 			
 		<p>
-		<b> Je ne sais pas ce que l'autre va décider  !!! </b>
+		<b> Je ne sais pas ce que l'autre va décider  !!! </b> </br>
 		Le dilemme du prisonnier est une situation caractéristique de la théorie des jeux où deux joueurs auraient tout intérêt à coopérer pour une décision.
-		Cependant, en l’absence de communication et étant donné les probabilités, les deux joueurs se trahiront.
-		Ce concept a été énoncé par Albert W. Tucker en 1950.
+		Cependant, en l’absence de communication et étant donné les probabilités, les deux joueurs se trahiront. </br>
+		Ce concept a été énoncé par Albert W. Tucker en 1950. </br>
 		<a href="https://www.youtube.com/watch?v=G9ER5bLxQEU"> Voir la vidéo de Arte</a>
 		</p>
 			
