--- a/m/1/index.html
+++ b/m/1/index.html
@@ -18,7 +18,7 @@
         <li><a href="index.html">  Les cours et savoir-faire  </a></li>
         <li><a href="python.html">  Python  </a></li>
         <li><a href="../rien.pdf">  Les maths, ça ne sert à rien ! </a></li>
-		<li> <a href="../video.html" target="_blank"> Vidéos</a> </li>
+		<li> <a href="../../videos.pdf"> Vidéos</a> </li>
         
       </ul>
     </nav>
