--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -97,7 +97,7 @@
 		<p> <a class= "td" href="nsi_t_bdd_4.pdf">  TD : Et si on partait faire du ski à Val Cenis ?</a> </p>
 		<p> <a class= "td" href="nsi_t_bdd_5.pdf"> Python et le SQL </a> </p>
 		<p> <a class= "autre" href="nsi_t_flask.pdf"> Tuto Flask </a> </p>
-		<p> <a class = "td" href="nsi_t_bdd_bac">Les sujets de type bac</a> </p>
+		<p> <a class = "td" href="nsi_t_bdd_bac.pdf">Les sujets de type bac</a> </p>
 	
 
 		<h2>La récursivité</h2>
@@ -105,7 +105,7 @@
 		<p> <a href="nsi_t_rec_1.pdf">  La programmation récursive </a> </p>
 		<p> <a class="td" href="nsi_t_rec_2.pdf">  Quelques exemples</a> </p>
 		<p> <a class= "td" href="nsi_t_rec_3.pdf">  Exercices </a> </p>
-		<p> <a class = "td" href="nsi_t_rec_bac">Les sujets de type bac</a> </p>
+		<p> <a class = "td" href="nsi_t_rec_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
 		
@@ -121,7 +121,7 @@
 		<p> <a href="nsi_t_poo_1.pdf">  Découvrir le principe de la POO</a> </p>
 		<p> <a href="nsi_t_poo_2.pdf">  La POO sur un exemple (+ exercices) </a> </p>
 		<p> <a class="td" href="nsi_t_poo_3.pdf">  L'agrégation de classes </a> </p>
-		<p> <a class = "td" href="nsi_t_poo_bac">Les sujets de type bac</a> </p>
+		<p> <a class = "td" href="nsi_t_poo_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
 		<h2>Les structures linéaires</h2>
@@ -132,7 +132,7 @@
 		<p> <a href="nsi_t_sl_4.pdf">Implémenter une pile</a> </p>
 		<p> <a href="nsi_t_sl_5.pdf">Implémentation une file</a> </p>
 		<p> <a class = "td" href="nsi_t_sl_td.pdf">Les labyrinthes</a> </p>
-		<p> <a class = "td" href="nsi_t_sl_bac">Les sujets de type bac</a> </p>
+		<p> <a class = "td" href="nsi_t_sl_bac.pdf">Les sujets de type bac</a> </p>
 		
 		<h2>Diviser pour régner</h2>
 			
@@ -147,7 +147,7 @@
 		<p> <a href="nsi_t_algo_arbres_1.pdf">Algorithme sur les arbres binaire</a> </p>
 		<p> <a href="nsi_t_arbres_3.pdf">Les arbres binaires de recherche</a> </p>
 		<p> <a href="nsi_t_algo_arbres_2.pdf">Algorithmes sur les arbres binaires de recherche</a> </p>
-		<p> <a class = "td" href="nsi_t_arbres_bac">Les sujets de type bac</a> </p>
+		<p> <a class = "td" href="nsi_t_arbres_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
 		
@@ -172,7 +172,7 @@
 		<p> <a href="nsi_t_routage_3.pdf">Le routage</a> </p>
 		<p> <a href="nsi_t_routage_4.pdf">Protocole RIP</a> </p>
 		<p> <a href="nsi_t_routage_5.pdf">Protocole OSPF</a> </p>
-		<p> <a class = "td" href="nsi_t_routage_bac">Les sujets de type bac</a> </p>
+		<p> <a class = "td" href="nsi_t_routage_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
 		<h2>Paradigmes de programmation</h2>
