--- a/snt/index.html
+++ b/snt/index.html
@@ -46,7 +46,8 @@
 		<p> <a href="snt_internet_3.pdf">  Adresse de routage</a> </p>
 		<p> <a href="snt_internet_4.pdf">  Le serveur DNS </a> </p>
 		<p> <a href="snt_internet_5.pdf">  Le peer-to-peer</a> </p>
-		<p> <a href="snt_internet_6.pdf">  Un mot sur l'écologie </a> </p>
+		<p> <a href="snt_internet_6.pdf">  La neutralité du Net</a> </p>
+		<p> <a href="snt_internet_7.pdf">  Un mot sur l'écologie </a> </p>
 	
 	
 	</div>
