--- a/m/2/index.html
+++ b/m/2/index.html
@@ -57,6 +57,14 @@
 		<p> <a href="arithmetique_2.pdf"> Les nombres premiers </a> </p>
 	
 	
+	
+	<h2>Variations et extréma de fonctions</h2>
+		
+		<p> <a href="m_2_variations_1.pdf"> Variations de fonctions </a> </p>
+		<p> <a href="m_2_variations_2.pdf"> Extréma de fonction </a> </p>
+	
+	
+	
 		<h2>Fonctions de réference</h2>
 		
 		<p> <a href="m_2_fonctions_reference_1.pdf"> La fonction carré </a> </p>
