--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -138,7 +138,7 @@
 			
 		<p> <a href="nsi_t_dpr_1.pdf">Intro</a> </p>
 		<p> <a href="nsi_t_dpr_2.pdf">Le tri fusion</a> </p>
-	
+		<p> <a class = "td" href="nsi_t_dpr_bac.pdf">Les sujets de type bac</a> </p>
 		
 		<h2>Les arbres</h2>
 			
