--- a/snt/index.html
+++ b/snt/index.html
@@ -47,6 +47,7 @@
 		<p> <a href="snt_internet_4.pdf">  Le serveur DNS </a> </p>
 		<p> <a href="snt_internet_5.pdf">  Le peer-to-peer</a> </p>
 		<p> <a href="snt_internet_6.pdf">  La neutralité du Net</a> </p>
+			<p> <a href="snt_internet_8.pdf"> TP réseau</a> </p>
 		<p> <a href="snt_internet_7.pdf">  Un mot sur l'écologie </a> </p>
 	
 	
