--- a/snt/index.html
+++ b/snt/index.html
@@ -50,7 +50,12 @@
 			<p> <a href="snt_internet_8.pdf"> TP réseau</a> </p>
 		<p> <a href="snt_internet_7.pdf">  Un mot sur l'écologie </a> </p>
 	
-	
+		<h2>Le web</h2>
+			
+		<p> <a href="snt_web_1.pdf">  Qu'est ce que le web ?</a>  </p>
+		<p> <a href="snt_web_2.pdf">  Les grandes dates su web </a> </p>
+		
+		
 	</div>
     
     <p id="footer">jb duthoit</p>
