--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -175,6 +175,16 @@
 		<p> <a class = "td" href="nsi_t_routage_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
+		<h2>Les processus</h2>
+		
+		<p> <a href="nsi_t_processus_1.pdf">Analogie avec la cuisine !</a> </p>
+		<p> <a href="nsi_t_processus_2.pdf">les processus</a> </p>
+		<p> <a href="nsi_t_processus_3.pdf">Ressource et ordonnancement</a> </p>
+		<p> <a href="nsi_t_processus_4.pdf">Interbloquages</a> </p>
+		<p> <a href="nsi_t_processus_5.pdf">Programmation concurente</a> </p>
+		<p> <a class="autre" href="nsi_t_processus_bac.pdf">Exercices types bac</a> </p>
+		
+		
 		<h2>Paradigmes de programmation</h2>
 			
 		<p> <a href="nsi_t_paradigme_1.pdf">Paradigmes de programmation</a> </p>
@@ -189,13 +199,7 @@
 		
 		
 		
-		<h2>Les processus</h2>
-			
-		<p> <a href="nsi_t_processus_1.pdf">les processus</a> </p>
-		<p> <a href="nsi_t_processus_2.pdf">Ordonnancement</a> </p>
-		<p> <a href="nsi_t_processus_3.pdf">Interbloquages</a> </p>
-		<p> <a href="nsi_t_processus_4.pdf">Programmation concurente</a> </p>
-		<p> <a class="autre" href="nsi_t_processus_5.pdf">Exercices types bac</a> </p>
+		
 		
 		<h2>Sécurisation</h2>
 			
