--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -185,6 +185,14 @@
 		<p> <a class="autre" href="nsi_t_processus_bac.pdf">Exercices types bac</a> </p>
 		
 		
+		<h2>Modularité</h2>
+		
+		<p> <a href="nsi_t_modularite_1.pdf">Activité</a>  <a href="meteo.txt"> Le fichier meteo </a> </p>
+
+		
+		
+		
+		
 		<h2>Paradigmes de programmation</h2>
 			
 		<p> <a href="nsi_t_paradigme_1.pdf">Paradigmes de programmation</a> </p>
