--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -188,7 +188,7 @@
 		<h2>Modularité</h2>
 		
 		<p> <a href="nsi_t_modularite_1.pdf">Activité</a>  <a href="meteo.txt"> Le fichier meteo </a> </p>
-
+		<p> <a href="nsi_t_modularite_2.pdf">Modularité</a>  </p>
 		
 		
 		
