--- a/snt/index.html
+++ b/snt/index.html
@@ -53,8 +53,8 @@
 		<h2>Le web</h2>
 			
 		<p> <a href="snt_web_1.pdf">  Qu'est ce que le web ?</a>  </p>
-		<p> <a href="snt_web_2.pdf">  Les grandes dates su web </a> </p>
-		
+		<p> <a href="snt_web_2.pdf">  Les grandes dates du web </a> </p>
+		<p> <a href="snt_web_3.pdf">  Les cookies </a> </p>
 		
 	</div>
     
