--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -193,7 +193,7 @@
 		
 		<h2>Ecrire un programme, le tester</h2>
 		
-		<p> <a href="nsi_t_test_1.pdf">Spécificité</a>  <a href="meteo.txt"> Le fichier meteo </a> </p>
+		<p> <a href="nsi_t_test_1.pdf">Spécificité</a>  </p>
 		<p> <a href="nsi_t_test_2.pdf">Tester un programme</a>  </p>
 		<p> <a href="nsi_t_test_3.pdf">Corriger un programme</a>  </p>
 		
