--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -84,7 +84,7 @@
 	<div id="contenu_cours">
 		<h2>Se remettre en mémoire python :-) </h2>
 		<p> <a href="nsi_t_rappels.pdf">  S'entraîner en python</a> </p>
-		<p> <a class = "td" href="nsi_t_rappels_bac">Les sujets de type bac</a> </p>
+		<p> <a class = "td" href="nsi_t_revisions_bac">Les sujets de type bac</a> </p>
 		
 		
     <div id="contenu_cours">
@@ -187,7 +187,7 @@
 		
 		<h2>Modularité</h2>
 		
-		<p> <a href="nsi_t_modularite_1.pdf">Activité</a>  <a href="meteo.txt"> Le fichier meteo </a> </p>
+		<p> <a href="nsi_t_modularite_1.pdf">Activité</a>  <a href="meteo.txt"> Le fichier méteo </a> </p>
 		<p> <a href="nsi_t_modularite_2.pdf">Modularité</a>  </p>
 		
 		
@@ -196,7 +196,7 @@
 		<p> <a href="nsi_t_test_1.pdf">Spécificité</a>  </p>
 		<p> <a href="nsi_t_test_2.pdf">Tester un programme</a>  </p>
 		<p> <a href="nsi_t_test_3.pdf">Corriger un programme</a>  </p>
-		
+		<p> <a class="autre" href="nsi_t_validation_bac.pdf">Exercices types bac</a> </p>
 		<h2>Paradigmes de programmation</h2>
 			
 		<p> <a href="nsi_t_paradigme_1.pdf">Paradigmes de programmation</a> </p>
