--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -35,8 +35,8 @@
 	
 	
 	
-		<!-- <h2>S'entraîner à l'épreuve pratique</h2> -->
-		<!-- <p> <a class= "autre"  href="epp/index_epp.html">Les sujets de 2021 et 2022 en notebook !</a></p> -->
+		<h2>S'entraîner à l'épreuve pratique</h2>
+		<p> <a class= "autre"  href="BNS_2023_pdf_unique.pdf">Tous les sujets de 2023 sur un seul pdf :-)</a></p>
 		
 		
 		
