--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -35,8 +35,7 @@
 	
 	
 	
-		<h2>S'entraîner à l'épreuve pratique</h2>
-		<p> <a class= "autre"  href="BNS_2023_pdf_unique.pdf">Tous les sujets de 2023 sur un seul pdf :-)</a></p>
+		
 		
 		
 		
@@ -80,14 +79,19 @@
 	
 		<!-- </p> -->
 	
-	
 	<div id="contenu_cours">
+	<h2>S'entraîner à l'épreuve pratique</h2>
+		<p> <a class= "autre"  href="BNS_2023_pdf_unique.pdf">Tous les sujets de 2023 sur un seul pdf :-)</a></p>
+		
+		
+		
+	<!-- <div id="contenu_cours"> -->
 		<h2>Se remettre en mémoire python :-) </h2>
 		<p> <a href="nsi_t_rappels.pdf">  S'entraîner en python</a> </p>
 		<p> <a class = "td" href="nsi_t_revisions_bac">Les sujets de type bac</a> </p>
 		
 		
-    <div id="contenu_cours">
+    <!-- <div id="contenu_cours"> -->
 		<h2>Les bases de données relationnelles</h2>
 			
 		<p> <a class="metier" href="https://www.onisep.fr/Ressources/Univers-Metier/Metiers/administrateur-administratrice-de-base-de-donnees">  Découvrir le métier d'Administrateur de bases de données </a> </p>
