--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -81,7 +81,7 @@
 	
 	<div id="contenu_cours">
 	<h2>S'entraîner à l'épreuve pratique</h2>
-		<p> <a class= "autre"  href="BNS_2023_pdf_unique.pdf">Tous les sujets de 2023 sur un seul pdf :-)</a></p>
+		<p> <a class= "bac"  href="BNS_2023_pdf_unique.pdf">Tous les sujets de 2023 sur un seul pdf :-)</a></p>
 		
 		
 		
@@ -101,7 +101,7 @@
 		<p> <a class= "td" href="nsi_t_bdd_4.pdf">  TD : Et si on partait faire du ski à Val Cenis ?</a> </p>
 		<p> <a class= "td" href="nsi_t_bdd_5.pdf"> Python et le SQL </a> </p>
 		<p> <a class= "autre" href="nsi_t_flask.pdf"> Tuto Flask </a> </p>
-		<p> <a class = "td" href="nsi_t_bdd_bac.pdf">Les sujets de type bac</a> </p>
+		<p> <a class = "bac" href="nsi_t_bdd_bac.pdf">Les sujets de type bac</a> </p>
 	
 
 		<h2>La récursivité</h2>
@@ -109,7 +109,7 @@
 		<p> <a href="nsi_t_rec_1.pdf">  La programmation récursive </a> </p>
 		<p> <a class="td" href="nsi_t_rec_2.pdf">  Quelques exemples</a> </p>
 		<p> <a class= "td" href="nsi_t_rec_3.pdf">  Exercices </a> </p>
-		<p> <a class = "td" href="nsi_t_rec_bac.pdf">Les sujets de type bac</a> </p>
+		<p> <a class = "bac" href="nsi_t_rec_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
 		
@@ -125,7 +125,7 @@
 		<p> <a href="nsi_t_poo_1.pdf">  Découvrir le principe de la POO</a> </p>
 		<p> <a href="nsi_t_poo_2.pdf">  La POO sur un exemple (+ exercices) </a> </p>
 		<p> <a class="td" href="nsi_t_poo_3.pdf">  L'agrégation de classes </a> </p>
-		<p> <a class = "td" href="nsi_t_poo_bac.pdf">Les sujets de type bac</a> </p>
+		<p> <a class = "bac" href="nsi_t_poo_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
 		<h2>Les structures linéaires</h2>
@@ -136,13 +136,13 @@
 		<p> <a href="nsi_t_sl_4.pdf">Implémenter une pile</a> </p>
 		<p> <a href="nsi_t_sl_5.pdf">Implémentation une file</a> </p>
 		<p> <a class = "td" href="nsi_t_sl_td.pdf">Les labyrinthes</a> </p>
-		<p> <a class = "td" href="nsi_t_sl_bac.pdf">Les sujets de type bac</a> </p>
+		<p> <a class = "bac" href="nsi_t_sl_bac.pdf">Les sujets de type bac</a> </p>
 		
 		<h2>Diviser pour régner</h2>
 			
 		<p> <a href="nsi_t_dpr_1.pdf">Intro</a> </p>
 		<p> <a href="nsi_t_dpr_2.pdf">Le tri fusion</a> </p>
-		<p> <a class = "td" href="nsi_t_dpr_bac.pdf">Les sujets de type bac</a> </p>
+		<p> <a class = "bac" href="nsi_t_dpr_bac.pdf">Les sujets de type bac</a> </p>
 		
 		<h2>Les arbres</h2>
 			
@@ -151,7 +151,7 @@
 		<p> <a href="nsi_t_algo_arbres_1.pdf">Algorithme sur les arbres binaire</a> </p>
 		<p> <a href="nsi_t_arbres_3.pdf">Les arbres binaires de recherche</a> </p>
 		<p> <a href="nsi_t_algo_arbres_2.pdf">Algorithmes sur les arbres binaires de recherche</a> </p>
-		<p> <a class = "td" href="nsi_t_arbres_bac.pdf">Les sujets de type bac</a> </p>
+		<p> <a class = "bac" href="nsi_t_arbres_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
 		
@@ -176,7 +176,7 @@
 		<p> <a href="nsi_t_routage_3.pdf">Le routage</a> </p>
 		<p> <a href="nsi_t_routage_4.pdf">Protocole RIP</a> </p>
 		<p> <a href="nsi_t_routage_5.pdf">Protocole OSPF</a> </p>
-		<p> <a class = "td" href="nsi_t_routage_bac.pdf">Les sujets de type bac</a> </p>
+		<p> <a class = "bac" href="nsi_t_routage_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
 		<h2>Les processus</h2>
@@ -186,7 +186,7 @@
 		<p> <a href="nsi_t_processus_3.pdf">Ressource et ordonnancement</a> </p>
 		<p> <a href="nsi_t_processus_4.pdf">Interbloquages</a> </p>
 		<p> <a href="nsi_t_processus_5.pdf">Programmation concurente</a> </p>
-		<p> <a class="autre" href="nsi_t_processus_bac.pdf">Exercices types bac</a> </p>
+		<p> <a class="bac" href="nsi_t_processus_bac.pdf">Exercices types bac</a> </p>
 		
 		
 		<h2>Modularité</h2>
@@ -200,7 +200,7 @@
 		<p> <a href="nsi_t_test_1.pdf">Spécificité</a>  </p>
 		<p> <a href="nsi_t_test_2.pdf">Tester un programme</a>  </p>
 		<p> <a href="nsi_t_test_3.pdf">Corriger un programme</a>  </p>
-		<p> <a class="autre" href="nsi_t_validation_bac.pdf">Exercices types bac</a> </p>
+		<p> <a class="bac" href="nsi_t_validation_bac.pdf">Exercices types bac</a> </p>
 		<h2>Paradigmes de programmation</h2>
 			
 		<p> <a href="nsi_t_paradigme_1.pdf">Paradigmes de programmation</a> </p>
