--- a/snt/index.html
+++ b/snt/index.html
@@ -56,6 +56,12 @@
 		<p> <a href="snt_web_2.pdf">  Les grandes dates du web </a> </p>
 		<p> <a href="snt_web_3.pdf">  Les cookies </a> </p>
 		
+		<h2>Les réseaux</h2>
+			
+		<p> <a href="snt_reseau_1.pdf">  Qu'est ce qu'un réseau?</a>  </p>
+		<p> <a href="snt_reseau_2.pdf">  Le modèle économique </a> </p>
+		<p> <a href="snt_reseau_3.pdf">  Les différents réseaux sociaux et leurs particularités </a> </p>
+		
 	</div>
     
     <p id="footer">jb duthoit</p>
