--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -88,7 +88,7 @@
 	<!-- <div id="contenu_cours"> -->
 		<h2>Se remettre en mémoire python :-) </h2>
 		<p> <a href="nsi_t_rappels.pdf">  S'entraîner en python</a> </p>
-		<p> <a class = "td" href="nsi_t_revisions_bac">Les sujets de type bac</a> </p>
+		<p> <a class = "bac" href="nsi_t_revisions_bac.pdf">Les sujets de type bac</a> </p>
 		
 		
     <!-- <div id="contenu_cours"> -->
