--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -105,7 +105,9 @@
 	
 
 		<h2>La récursivité</h2>
-			
+		
+
+		<p> <a href="vache.gif">  La vache qui rit qui rit qui rit ... </a> </p>		
 		<p> <a href="nsi_t_rec_1.pdf">  La programmation récursive </a> </p>
 		<p> <a class="td" href="nsi_t_rec_2.pdf">  Quelques exemples</a> </p>
 		<p> <a class= "td" href="nsi_t_rec_3.pdf">  Exercices </a> </p>
