--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -118,7 +118,7 @@
 		
 		<h2>Les dictionnaires</h2>
 			
-		<p> <a href="nsi_t_dico_t.pdf">  Les dictionnaires </a> <a class="autre" href="nsi_t_dico_1.pdf">  -->Le cours de premièrecd  </a> </p>
+		<p> <a href="nsi_t_dico_t.pdf">  Les dictionnaires </a> <a class="autre" href="nsi_t_dico_1.pdf">  -->Le cours de première  </a> </p>
 		<p> <a class="autre" href="nsi_t_dico_mot.txt">  --> Les données du chapitre </a> </p>
 		
 		
