--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -224,7 +224,8 @@
 		<p> <a href="nsi_t_securisation_1.pdf">Intro</a> </p>
 		<p> <a href="nsi_t_securisation_2.pdf">Le chiffrement symétrique</a>   
 		  <a class="autre" href="secret.txt"> (ici, le code secret à déchiffrer)</a> </p>
-		<p> <a href="nsi_t_securisation_3.pdf">Le chiffrement asymétrique</a> </p>
+		<p> <a href="nsi_t_securisation_3.pdf">Le chiffrement asymétrique</a> 
+		<a class="autre" href="secret2.txt"> (ici, le code secret à déchiffrer)</a> </p>
 		<p> <a href="nsi_t_securisation_4.pdf">Authentification</a> </p>
 		<p> <a href="nsi_t_securisation_5.pdf">Le protocole https</a> </p>
 		
