--- a/nsi/t/index.html
+++ b/nsi/t/index.html
@@ -228,6 +228,7 @@
 		<a class="autre" href="secret2.txt"> (ici, le code secret à déchiffrer)</a> </p>
 		<p> <a href="nsi_t_securisation_4.pdf">Authentification</a> </p>
 		<p> <a href="nsi_t_securisation_5.pdf">Le protocole https</a> </p>
+		<p> <a href="https://www.root-me.org/">Pour les plus curieux : S'entraîner au hacking éthique !</a> </p>
 		
 		
 		<h2> Validation d'un programme </h2>
