--- a/m/1/index.html
+++ b/m/1/index.html
@@ -130,7 +130,7 @@
 		
 		
 		<p> <a href="m_1_expo_1.pdf", target="_blank">  Définition de la fonction exponentielle  </a>
-			<a href="https://www.geogebra.org/calculator/saadnnwrcd objectex", target="_blank">  fichier geogebra approche  </a>		</p>
+			<a href="https://www.geogebra.org/m/saadnnwr", target="_blank">  fichier geogebra approche  </a>		</p>
 		<p> <a href="m_1_expo_2.pdf", target="_blank">  Etude de la fonction exponentielle  </a> </p>
 	
 		
