--- a/snt/index.html
+++ b/snt/index.html
@@ -61,7 +61,7 @@
 		<p> <a href="snt_reseau_1.pdf">  Qu'est ce qu'un réseau?</a>  </p>
 		<p> <a href="snt_reseau_2.pdf">  Le modèle économique </a> </p>
 		<p> <a href="snt_reseau_3.pdf">  Les différents réseaux sociaux et leurs particularités </a> </p>
-		
+		<p> <a href="snt_reseau_4.pdf">  La notion de petit monde </a> </p>
 	</div>
     
     <p id="footer">jb duthoit</p>
